--- a/src/styles/layout/_slider.sass
+++ b/src/styles/layout/_slider.sass
@@ -60,6 +60,46 @@
       top: unset
       bottom: 0
 
+
+.headerSwiper
+  width: 100%
+  height: 100%
+
+  .swiper
+    width: 100%
+    height: 100%
+
+    .swiper-slide
+      display: flex
+      align-items: center
+      justify-content: center
+      width: 100%
+      height: 100%
+
+      section
+        width: 100%
+        height: 100%
+
+  &.swiperNav
+    position: relative
+    z-index: 10
+
+    .swiper-button-prev,
+    .swiper-button-next
+      width: 55px
+      height: unset !important
+      transform: unset
+      left: 155px
+      z-index: 10
+
+    .swiper-button-prev
+      top: 45%
+
+    .swiper-button-next
+      top: 50%
+      left: 400px
+
+
 @media screen and (max-width: 1060px)
   .gallerySwiper
     .swiper
