add desktop slider

--- a/src/styles/layout/_slider.sass
+++ b/src/styles/layout/_slider.sass
@@ -91,6 +91,7 @@
       transform: unset
       left: 155px
       z-index: 10
+      border: 5px solid red
 
     .swiper-button-prev
       top: 45%
