--- a/src/components/shared/Header/Header.module.sass
+++ b/src/components/shared/Header/Header.module.sass
@@ -8,7 +8,7 @@ $marginTop: 115px
   padding-top: $marginTop
   @include overlayImage(linear-gradient(to top, $bg 0%, $bg 26%, rgba(39, 39, 39, 0.6) 100%), 1, 1)
   max-height: 1240px
-  min-height: 720px
+  min-height: 800px
   overflow: hidden
   z-index: 0
 
@@ -104,14 +104,14 @@ $marginTop: 115px
       align-items: flex-end
       z-index: 4
       width: 100%
-      padding-top: 100px
+      padding-top: 135px
       user-select: none
 
       .sliderTitle
         letter-spacing: 16px
         text-align: right
         margin: 0 -16px 45px 0
-        padding: 0
+        padding: 0 0 0 220px
 
       .sliderDescription
         color: $white
@@ -131,8 +131,97 @@ $marginTop: 115px
       height: 100%
       @include overlay($black, .4, normal)
 
+  .swiperNavigation
+    position: absolute
+    top: 360px
+    left: 173px
+    z-index: 99
+
+    .prev,
+    .next
+      position: relative
+      border: none
+      background-color: transparent
+      font-family: $oswald
+      color: $white
+      font-size: 18px
+      line-height: 1
+      text-transform: uppercase
+      letter-spacing: 5.12px
+      font-weight: 400
+      padding: 0 15px
+      cursor: pointer
+
+      &::before
+        content: ''
+        display: block
+        position: absolute
+        top: 50%
+        right: 0
+        transform: translate(100%, -50%)
+        width: 20px
+        height: 20px
+        background: url('../../../../static/assets/arrow_light.svg') center center / 20px no-repeat
+        transition: .3s ease
+
+    .next:hover::before
+      transform: translate(120%, -50%)
+
+    .prev
+      margin-right: 40px
+
+      &::before
+        right: unset
+        left: 0
+        transform: translate(-100%, -50%) rotate(180deg)
+
+      &:hover::before
+        transform: translate(-120%, -50%) rotate(180deg)
+
+  .ghostTitle
+    position: absolute
+    top: 370px
+    left: 0
+    font-size: 115px
+    font-weight: 900
+    line-height: 0
+    color: $white
+    z-index: 6
+    opacity: .1
+    mix-blend-mode: overlay
+    user-select: none
+    pointer-events: none
+
+  .counterWrap
+    position: absolute
+    left: 160px
+    top: 175px
+    display: flex
+    z-index: 10
+
+    .currCount
+      font-size: 80px
+      font-family: $oswald
+      font-weight: 400
+      line-height: 1
+      letter-spacing: 8px
+      color: $main
+      margin-right: 5px
+
+    .allCount
+      font-size: 20px
+      font-family: $oswald
+      font-weight: 300
+      line-height: 1
+      letter-spacing: 2px
+      color: $gray2
+      margin-top: -10px
+
+
 @media screen and (max-width: 1599px)
   .header
+    min-height: 720px
+
     .socials
       width: 285px
       height: 320px
@@ -145,66 +234,51 @@ $marginTop: 115px
         width: 1px
 
       &.small
-        width: 140px
-        height: 100%
-        top: unset
-        bottom: 0
-        padding-bottom: 160px
+        width: 110px
+        padding-bottom: 100px
 
         &::before
-          top: unset
-          bottom: 250px
+          bottom: 190px
           left: 50%
           transform: translateX(-50%)
 
+        .socialIcon
+          text-align: center
+
         .socialsTitle
-          white-space: nowrap
-          color: $white
-          font-size: 11px
-          line-height: 1
-          text-transform: uppercase
-          letter-spacing: 12px
-          writing-mode: vertical-lr
-          text-orientation: mixed
-          transform: rotate(180deg) translateX(22%)
-          margin-bottom: 81px
-          opacity: .7
-          vertical-align: center
+          font-size: 10px
+          letter-spacing: 11px
+          transform: rotate(180deg) translateX(35%)
+          margin-bottom: 73px
 
     .sliderWrap
-      position: absolute
-      top: 0
-      left: 0
-      z-index: 4
-      display: flex
-
       .sliderContent
-        display: flex
-        flex-direction: column
-        align-items: flex-end
-        z-index: 4
-        width: 100%
-        padding-top: 30px
+        padding-top: 180px
         user-select: none
 
         .sliderTitle
-          letter-spacing: 16px
-          text-align: right
-          margin: 0 -16px 45px 0
-          padding: 0
+          padding-left: 190px
 
-        .sliderDescription
-          color: $white
-          text-align: right
-          padding: 0
-          margin: 0 0 40px 0
-          max-width: 570px
+    .swiperNavigation
+      top: 283px
+      left: 173px
+      z-index: 99
 
-          p
-            margin: 0
+    .ghostTitle
+      top: 300px
+      font-size: 100px
+
+    .counterWrap
+      left: 105px
+      top: 135px
+
+      .currCount
+        font-size: 70px
+
 
 @media screen and (max-width: 1199px)
   .header
+    min-height: 680px
     .socials
       width: 225px
       height: 270px
@@ -215,6 +289,46 @@ $marginTop: 115px
         left: 30px
         height: 45px
         width: 1px
+
+      &.small
+        width: 90px
+        padding-bottom: 60px
+
+        &::before
+          bottom: 150px
+          left: 50%
+          transform: translateX(-50%)
+
+    .sliderWrap
+      .sliderContent
+        padding-top: 180px
+        user-select: none
+
+        .sliderTitle
+          padding-left: 190px
+
+    .swiperNavigation
+      top: 235px
+      left: 115px
+      z-index: 99
+
+      .next,
+      .prev
+        font-size: 16px
+
+        &::before
+          background-size: 18px
+
+    .ghostTitle
+      top: 290px
+      font-size: 90px
+
+    .counterWrap
+      left: 80px
+      top: 110px
+
+      .currCount
+        font-size: 60px
 
 @media screen and (max-width: 767px)
   .header
