add header slider mobile styles

--- a/src/styles/layout/_slider.sass
+++ b/src/styles/layout/_slider.sass
@@ -157,5 +157,12 @@
         bottom: unset
         left: unset
 
+@media screen and (max-width: 599px)
+  .headerSwiper
+    .swiper
+      .swiper-slide
+        justify-content: flex-end
+        padding-right: 20px
+
 
 
