--- a/src/components/shared/Header/Header.module.sass
+++ b/src/components/shared/Header/Header.module.sass
@@ -258,6 +258,7 @@ $marginTop: 115px
 
         .sliderTitle
           padding-left: 190px
+          margin-right: -6px
 
     .swiperNavigation
       top: 283px
@@ -306,6 +307,8 @@ $marginTop: 115px
 
         .sliderTitle
           padding-left: 190px
+          letter-spacing: 6px
+          margin-bottom: 35px
 
     .swiperNavigation
       top: 235px
@@ -382,6 +385,8 @@ $marginTop: 115px
 
 @media screen and (max-width: 599px)
   .header
+    min-height: 650px
+
     .socials
       width: auto
       height: 140px
@@ -395,3 +400,102 @@ $marginTop: 115px
         margin-top: 15px
         color: $gray2
         cursor: pointer
+
+      &.small
+        width: 60px
+        padding-bottom: 30px
+
+        &::before
+          display: block
+          bottom: 110px
+          height: 40px
+
+    .sliderWrap
+      .sliderContent
+        padding: 0
+        max-width: calc(100vw - 90px)
+        margin: 0
+
+        .sliderTitle
+          padding-left: 0
+          max-width: 100%
+          margin-bottom: 20px
+          margin-right: 0
+
+          *
+            font-size: 25px !important
+            letter-spacing: 3px
+
+        .sliderDescription
+          max-width: 100%
+          margin-bottom: 20px
+
+        .button
+          padding: 12px 45px 12px 20px
+
+          &::after
+            right: 20px
+
+    .swiperNavigation
+      width: auto
+      top: unset
+      left: 50%
+      transform: translateX(calc(-50% + 30px))
+      bottom: 30px
+      z-index: 99
+
+      .prev
+        margin-right: 20px
+
+      .prev,
+      .next
+        font-size: 14px
+
+    .ghostTitle
+      top: 160px
+      font-size: 50px
+
+    .counterWrap
+      flex-direction: column-reverse
+      left: 15px
+      top: 95px
+
+      .currCount
+        font-size: 30px
+        letter-spacing: 2px
+
+      .allCount
+        font-size: 12px
+        margin-bottom: 5px
+
+
+@media screen and (max-width: 359px)
+  .header
+    min-height: 560px
+
+    .socials
+      &.small
+        .socialsTitle
+          font-size: 10px
+          letter-spacing: 8px
+
+    .sliderWrap
+      .sliderContent
+        .sliderTitle
+          *
+            font-size: 20px
+            letter-spacing: 2px
+
+    .swiperNavigation
+      .prev
+        margin-right: 10px
+
+      .prev,
+      .next
+        font-size: 12px
+
+    .ghostTitle
+      top: 130px
+
+    .counterWrap
+      top: 85px
