add products slider

--- a/src/components/shared/Header/Header.module.sass
+++ b/src/components/shared/Header/Header.module.sass
@@ -168,7 +168,7 @@ $marginTop: 115px
       transform: translate(120%, -50%)
 
     .prev
-      margin-right: 40px
+      margin-right: 30px
 
       &::before
         right: unset
@@ -445,7 +445,7 @@ $marginTop: 115px
       z-index: 99
 
       .prev
-        margin-right: 20px
+        margin-right: 5px
 
       .prev,
       .next
@@ -488,10 +488,11 @@ $marginTop: 115px
 
     .swiperNavigation
       .prev
-        margin-right: 10px
+        margin-right: 0
 
       .prev,
       .next
+        padding-right: 3px
         font-size: 12px
 
     .ghostTitle
