add article list section desktop styles

--- a/src/styles/abstracts/_variables.sass
+++ b/src/styles/abstracts/_variables.sass
@@ -4,6 +4,7 @@ $black: #000
 
 $gray: #FEFEFE
 $gray2: #6F6F6F
+$gray2Opacity: rgba(71, 71, 71, .8)
 $gray3: #434343
 $gray4: #373737
 $gray5: #2b2b2b
