--- a/src/components/sections/ArticleList/ArticleList.module.sass
+++ b/src/components/sections/ArticleList/ArticleList.module.sass
@@ -4,10 +4,38 @@
   .articleListWrap
     display: grid
     grid-template-columns: repeat(3, 1fr)
+    margin-bottom: 45px
 
     .article
       position: relative
       height: 590px
+      overflow: hidden
+      @include overlay($main, .5, 0, color)
+
+      &::before
+        content: ''
+        display: block
+        position: absolute
+        top: 50%
+        left: 50%
+        transform: translate(-50%, -50%)
+        width: 145px
+        height: 145px
+        border-radius: 100%
+        background: url('../../../../static/assets/magnificer.png') center center / 40px no-repeat $mainOpacity
+        opacity: 0
+        transition: .6s ease
+        z-index: 2
+
+      &:hover
+        &::before
+          opacity: 1
+
+        &::after
+          opacity: 0
+
+        .description
+          opacity: 0
 
       .miniature
         position: absolute
@@ -24,6 +52,34 @@
         top: 55px
         left: 30px
         z-index: 2
-        background-color: $gray2
-        padding: 20px 10px
+        background-color: $gray2Opacity
+        padding: 10px 20px 20px 10px
         max-width: 250px
+        transition: .4s linear
+
+        .text
+          font-size: 18px
+          font-weight: 300
+          color: $white
+          line-height: 2
+          @include cutText(2)
+
+      .ghostText
+        position: absolute
+        bottom: 36px
+        right: 18px
+        font-size: 75px
+        color: $white
+        font-family: $muli
+        font-weight: 900
+        letter-spacing: 25.6px
+        line-height: 1
+        opacity: .3
+        z-index: 3
+        text-transform: uppercase
+        writing-mode: vertical-lr
+        text-orientation: mixed
+        transform: rotate(180deg)
+
+  .button
+    margin: 0 auto
