--- a/src/components/sections/DesignWithUs/DesignWithUs.module.sass
+++ b/src/components/sections/DesignWithUs/DesignWithUs.module.sass
@@ -4,6 +4,12 @@
   .sectionTitle
     margin-bottom: 110px
 
+  .sectionShadowTitle
+    top: unset
+    bottom: 0
+    left: calc(((100vw - 1440px) / 2) * -1)
+    transform: translateY(100%)
+
   .contentWrap
     display: flex
     justify-content: space-between
@@ -53,6 +59,12 @@
   .designWithUsWrap
     .sectionTitle
       margin-bottom: 50px
+
+    .sectionShadowTitle
+      top: unset
+      bottom: 0
+      left: 70%
+      transform: translate(-50%, 50%)
 
     .contentWrap
       .descriptionWrap
