--- a/src/styles/themes/_global.sass
+++ b/src/styles/themes/_global.sass
@@ -5,13 +5,16 @@
 
 html
   font-family: $muli
-  max-width: 2560px
-  margin: 0 auto
 
 body
   position: relative
   overflow-x: hidden
   background-color: $bg
+
+.pageWrap
+  overflow: hidden
+  max-width: 2560px
+  margin: 0 auto
 
 a
   text-decoration: none
