--- a/src/components/sections/Cooperation/Cooperation.module.sass
+++ b/src/components/sections/Cooperation/Cooperation.module.sass
@@ -4,6 +4,12 @@
   .sectionTitle
     margin-bottom: 110px
 
+  .sectionShadowTitle
+    top: unset
+    bottom: 0
+    left: calc(((100vw - 1440px) / 2) * -1)
+    transform: translateY(100%)
+
   .contentWrap
     display: flex
     align-items: flex-start
@@ -135,6 +141,12 @@
   .cooperationWrap
     .sectionTitle
       margin-bottom: 60px
+
+    .sectionShadowTitle
+      top: unset
+      bottom: 0
+      left: 70%
+      transform: translate(-50%, 50%)
 
     .contentWrap
       flex-direction: column
