add margin index sections

--- a/src/layouts/index/index.module.sass
+++ b/src/layouts/index/index.module.sass
@@ -3,7 +3,24 @@
 .mainPage
   margin-top: 150px
 
-  .cooperation
+  .designWithUs,
+  .productsSlider,
+  .cooperation,
+  .articleSlider
     margin-bottom: 165px
+
+@media screen and (max-width: 992px)
+  .mainPage
+    margin-top: 80px
+
+    .designWithUs,
+    .productsSlider,
+    .cooperation,
+    .articleSlider
+      margin-bottom: 80px
+
+@media screen and (max-width: 599px)
+  .mainPage
+    margin-top: 60px
 
 
