--- a/src/components/Article/ArticleList/ArticleList.module.sass
+++ b/src/components/Article/ArticleList/ArticleList.module.sass
@@ -18,7 +18,15 @@
     .articleTile
       margin-top: 9.87vw
 
+@media screen and (max-width: 992px)
+  .articleList
+    .buttonWrap
+      margin-top: 35px
+
 @media screen and (max-width: 599px)
   .articleList
     .articleTile
+      margin-top: 30px
+
+    .buttonWrap
       margin-top: 30px
