--- a/src/components/Article/ArticleTile/ArticleTile.module.sass
+++ b/src/components/Article/ArticleTile/ArticleTile.module.sass
@@ -158,6 +158,9 @@
     .descriptionWrap
       padding: 25px
 
+      p
+        margin-bottom: 0
+
       .tags
         max-height: 68px
         margin-bottom: 10px
