--- a/src/layouts/aboutUs/aboutUs.module.sass
+++ b/src/layouts/aboutUs/aboutUs.module.sass
@@ -58,7 +58,7 @@
     margin-top: -155px
 
     .descriptionWrap
-      margin: 0 auto 40px
+      margin: 0 auto 50px
 
       .descriptionTitle
         margin-bottom: 20px !important
@@ -66,10 +66,8 @@
         *
           font-size: 30px !important
 
-    .ourSpeciality
-      margin-bottom: 40px
-
+    .ourSpeciality,
     .map
-      margin-bottom: 40px
+      margin-bottom: 50px
 
 
