fix header title

--- a/src/components/shared/Header/Header.module.sass
+++ b/src/components/shared/Header/Header.module.sass
@@ -86,9 +86,13 @@ $marginTop: 115px
     color: $white
     padding-top: calc(18.5vw - #{$marginTop})
 
-    h1
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6
       text-align: right
-      transform: translateX(9%)
       margin: 0
 
   .sliderWrap
@@ -299,6 +303,9 @@ $marginTop: 115px
           bottom: 150px
           left: 50%
           transform: translateX(-50%)
+
+    .headerWrap
+      padding-top: 30vw
 
     .sliderWrap
       .sliderContent
