--- a/src/components/layout/Navbar/Navbar.module.sass
+++ b/src/components/layout/Navbar/Navbar.module.sass
@@ -7,7 +7,7 @@ $burgerBarHeight: 2px
   width: 100%
   display: flex
   align-items: center
-  padding: 50px 15vw 50px 90px
+  padding: 50px 300px 50px 90px
   z-index: 10
   transition: .4s ease
 
@@ -54,6 +54,14 @@ $burgerBarHeight: 2px
         &.menuPhone
           display: none
 
+@media screen and (max-width: 1790px)
+  .navbar
+    padding-right: 230px
+
+@media screen and (max-width: 1790px)
+  .navbar
+    padding-right: 160px
+
 @media screen and (max-width: 1599px)
   .navbar
     padding: 40px
@@ -63,7 +71,7 @@ $burgerBarHeight: 2px
       padding: 20px 40px
 
     .main
-      padding-left: 70px
+      padding-left: 45px
 
 @media screen and (max-width: 1199px)
   .navbar
