--- a/src/layouts/article/article.module.sass
+++ b/src/layouts/article/article.module.sass
@@ -17,7 +17,7 @@
       .title
         position: absolute
         top: 0
-        left: 0
+        left: unset
         transform: translateY(calc(-100% - 35px))
 
       .metaArticle
