--- a/src/layouts/product/product.module.sass
+++ b/src/layouts/product/product.module.sass
@@ -13,7 +13,7 @@
   .productTitle
     position: absolute !important
     top: 0
-    left: 0
+    left: unset
     transform: translateY(calc(-100% - 55px))
 
     *
@@ -95,6 +95,9 @@
 
       .button
         margin: 0 10px 10px 0
+
+    .productGalleryWrap
+      margin-bottom: 30px
 
 
 
