add first page transition version

--- a/src/components/layout/Navbar/Navbar.module.sass
+++ b/src/components/layout/Navbar/Navbar.module.sass
@@ -10,6 +10,7 @@ $burgerBarHeight: 2px
   padding: 50px 300px 50px 90px
   z-index: 10
   transition: .4s ease
+  max-width: 2560px
 
   &.active
     padding: 25px 10vw 25px 70px
