--- a/src/styles/themes/_global.sass
+++ b/src/styles/themes/_global.sass
@@ -11,6 +11,16 @@ body
   overflow-x: hidden
   background-color: $bg
 
+.preload
+  display: block
+  position: absolute
+  top: 0
+  left: 0
+  right: 0
+  bottom: 0
+  background-color: black
+  z-index: 999999
+
 .pageWrap
   overflow: hidden
   max-width: 2560px
