add page transition

--- a/src/styles/themes/_global.sass
+++ b/src/styles/themes/_global.sass
@@ -18,8 +18,18 @@ body
   left: 0
   right: 0
   bottom: 0
-  background-color: black
+  background-color: $gray5
   z-index: 999999
+
+  .preloadLogoWrap
+    position: absolute
+    top: 50%
+    left: 50%
+
+    .preloadLogo
+      width: 20vw
+      max-width: 300px
+      transform: translate(-50%, -50%)
 
 .pageWrap
   overflow: hidden
