add animation - about us

--- a/src/components/sections/Map/Map.module.sass
+++ b/src/components/sections/Map/Map.module.sass
@@ -8,6 +8,7 @@
   background-color: $main
   max-width: 1920px
   overflow: hidden
+  margin: 0 auto
 
   *
     font-size: 20px
@@ -16,6 +17,7 @@
   .map
     width: calc(100vw - 39.9vw)
     min-height: 590px
+    max-width: 1160px
 
   .infosWrap
     position: relative
