--- a/src/components/sections/Materials/Materials.module.sass
+++ b/src/components/sections/Materials/Materials.module.sass
@@ -23,7 +23,7 @@
         position: relative
         border: none
         border-radius: 20px
-        max-width: 105px
+        max-width: 160px
         width: 100%
         font-size: 16px
         font-family: $montserrat
@@ -35,8 +35,25 @@
         background-color: transparent
         overflow: hidden
 
+        &::after
+          content: ''
+          display: block
+          position: absolute
+          top: 0
+          left: 0
+          right: 0
+          bottom: 0
+          width: 100%
+          height: 100%
+          background-color: #000
+          z-index: -1
+          opacity: 0
+
         &.active
           color: $silver
+
+          &::after
+            opacity: .3
 
         .bgc
           display: block
@@ -46,7 +63,7 @@
           right: 0
           bottom: 0
           width: 100%
-          height: 30px
+          height: 100%
           z-index: -1
 
     .materialSample
