--- a/src/components/sections/Map/Map.module.sass
+++ b/src/components/sections/Map/Map.module.sass
@@ -16,8 +16,12 @@
 
   .map
     width: calc(100vw - 39.9vw)
-    min-height: 590px
+    min-height: 100%
     max-width: 1160px
+
+    div
+      height: 100%
+
 
   .infosWrap
     position: relative
@@ -112,8 +116,7 @@
       font-size: 18px
 
     .map
-      width: 100%
-      height: 450px
+      display: none
 
 
     .infosWrap
