--- a/src/components/sections/Materials/Materials.module.sass
+++ b/src/components/sections/Materials/Materials.module.sass
@@ -5,6 +5,16 @@
     p
       margin-bottom: 20px
 
+  .materialsBoth
+    display: flex
+
+    .materials:nth-child(2)
+      flex-direction: row-reverse
+      margin-left: 50px
+
+      .materialList
+        margin-left: 80px
+
   .materials
     display: flex
     align-items: center
@@ -24,6 +34,7 @@
         border: none
         border-radius: 20px
         max-width: 160px
+        min-width: 110px
         width: 100%
         font-size: 16px
         font-family: $montserrat
@@ -73,8 +84,24 @@
       border-radius: 4px
       overflow: hidden
 
+@media screen and (max-width: 992px)
+  .materialsWrap
+    .materialsBoth
+      flex-direction: column
+
+      .materials:nth-child(2)
+        margin:
+          top: 40px
+          left: 0
+        justify-content: flex-end
+
 @media screen and (max-width: 599px)
   .materialsWrap
+    .materialsBoth
+      .materials:nth-child(2)
+        .materialList
+          margin-left: 30px
+
     .materials
       .materialList
         margin-right: 30px
