--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -6,6 +6,7 @@
 // Components
 @import './src/styles/components/contact/contact'
 @import './src/styles/components/productTile/productTile'
+@import './src/styles/components/breadcrumb/breadcrumb'
 
 // Layout
 @import './src/styles/layout/slider'
