change product bar

--- a/src/components/sections/Products/Products.module.sass
+++ b/src/components/sections/Products/Products.module.sass
@@ -2,10 +2,10 @@
 
 .productsComponentWrap
   .filterWrap
-    background-color: $mainOpacity
+    background-color: $mainOpacityBar
     padding:
-      top: 25px
-      bottom: 25px
+      top: 18px
+      bottom: 18px
 
     .wrap
       display: flex
