--- a/src/styles/abstracts/_variables.sass
+++ b/src/styles/abstracts/_variables.sass
@@ -21,6 +21,7 @@ $bg: #272727
 
 $main: #C5A47E
 $mainOpacity: rgba(197, 164, 126, .84)
+$mainOpacityBar: rgba(197, 164, 126, .60)
 $second: #666666
 
 
