show more user select

--- a/src/components/layout/Text/SectionTitle/SectionTitle.module.sass
+++ b/src/components/layout/Text/SectionTitle/SectionTitle.module.sass
@@ -29,6 +29,7 @@
     white-space: nowrap
     opacity: .01
     color: $gray
+    user-select: none
 
 @media screen and (max-width: 1599px)
   .sectionTitleWrap
