add after send message

--- a/src/components/shared/Contact/Contact.module.sass
+++ b/src/components/shared/Contact/Contact.module.sass
@@ -30,6 +30,11 @@
       .inputsWrap
         min-width: 205px
 
+  .afterSendMessage
+    font-size: 16px
+    color: $white
+    margin-bottom: 30px
+
   .contactInfo
     display: flex
     flex-direction: column
